# shadowscan

./: LICENSE  README.md  cli.py  collect.py  pyproject.toml  report.py
src/shadowscan/: ports.py  utils.py
