[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowscan"
version = "0.1.0"
description = "Linux system audit CLI that outputs JSON reports and port alerts."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Nyxamir"}]
dependencies = []

[project.scripts]
shadowscan = "shadowscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
